--- a/simple-kmod.conf
+++ b/simple-kmod.conf
@@ -4,4 +4,4 @@
 KMOD_CONTAINER_BUILD_CONTEXT="git://github.com/kmods-via-containers/kvc-simple-kmod.git"
 KMOD_CONTAINER_BUILD_FILE=Dockerfile.fedora
 KMOD_SOFTWARE_VERSION=dd1a7d4
-KMOD_NAMES="simple-kmod simple-procfs-kmod"
+KMOD_NAMES="gtp5g"
